--- a/deploy/onyx.env
+++ b/deploy/onyx.env
@@ -1,5 +1,4 @@
-MONGODB_HOST=localhost
 MONGODB_PORT=27017
 MONGODB_USER=root
 MONGODB_PASSWORD=password
-MONGODB_DATABASE=onyx_test
+MONGODB_DATABASE=onyx
